// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<YouTubeLiveChat> should render component with "domain" and "videoId" props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="youtube-live-chat"
      >
        <iframe
          class="youtube-live-chat"
          data-testid="iframe"
          src="https://www.youtube.com/live_chat?v=AmdW4DdvcQE&embed_domain=localhost"
          style="width: 100%; height: 380px;"
        />
        <p
          class="text text--size-md"
          data-testid="messageMobile"
        >
          Não é possível exibir o chat em dispositivos móveis
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="youtube-live-chat"
    >
      <iframe
        class="youtube-live-chat"
        data-testid="iframe"
        src="https://www.youtube.com/live_chat?v=AmdW4DdvcQE&embed_domain=localhost"
        style="width: 100%; height: 380px;"
      />
      <p
        class="text text--size-md"
        data-testid="messageMobile"
      >
        Não é possível exibir o chat em dispositivos móveis
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<YouTubeLiveChat> should render component with "src" props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="youtube-live-chat"
      >
        <iframe
          class="youtube-live-chat"
          data-testid="iframe"
          src="https://www.youtube.com/live_chat?v=AmdW4DdvcQE&embed_domain=localhost"
          style="width: 100%; height: 380px;"
        />
        <p
          class="text text--size-md"
          data-testid="messageMobile"
        >
          Não é possível exibir o chat em dispositivos móveis
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="youtube-live-chat"
    >
      <iframe
        class="youtube-live-chat"
        data-testid="iframe"
        src="https://www.youtube.com/live_chat?v=AmdW4DdvcQE&embed_domain=localhost"
        style="width: 100%; height: 380px;"
      />
      <p
        class="text text--size-md"
        data-testid="messageMobile"
      >
        Não é possível exibir o chat em dispositivos móveis
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<YouTubeLiveChat> should render component with advanced props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="youtube-live-chat"
      >
        <iframe
          class="youtube-live-chat"
          data-testid="iframe"
          src="https://www.youtube.com/live_chat?v=AmdW4DdvcQE&embed_domain=localhost"
          style="width: 250px; height: 250px;"
        />
        <p
          class="text text--size-md"
          data-testid="messageMobile"
        >
          Não é possível exibir o chat em dispositivos móveis
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="youtube-live-chat"
    >
      <iframe
        class="youtube-live-chat"
        data-testid="iframe"
        src="https://www.youtube.com/live_chat?v=AmdW4DdvcQE&embed_domain=localhost"
        style="width: 250px; height: 250px;"
      />
      <p
        class="text text--size-md"
        data-testid="messageMobile"
      >
        Não é possível exibir o chat em dispositivos móveis
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
